fix header overlap when using links

--- a/code/style.css
+++ b/code/style.css
@@ -1,5 +1,6 @@
 html {
   background: #dcf8cf;
+  scroll-padding-top: 100px;
 }
 
 body {
